--- a/index.html
+++ b/index.html
@@ -1,12 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <title>RSUITE Table</title>
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <style>
-      .sk-cube-grid {
+<!doctype html><html lang="en"><head><meta charset="UTF-8"/><title>RSUITE Table</title><meta http-equiv="X-UA-Compatible" content="IE=edge"/><meta name="viewport" content="width=device-width,initial-scale=1"/><style>.sk-cube-grid {
         width: 40px;
         height: 40px;
         top: 50%;
@@ -94,42 +86,4 @@
           -webkit-transform: scale3D(0, 0, 1);
           transform: scale3D(0, 0, 1);
         }
-      }
-    </style>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/rsuite-theme@2.0.17/dist/css/rsuite.min.css"
-    />
-    <script
-      type="text/javascript"
-      src="//cdn.staticfile.org/babel-standalone/6.24.0/babel.min.js"
-    ></script>
-  <link href="./main.css?730d41e423854a89dd97" rel="stylesheet"></head>
-
-  <body>
-    <div id="app">
-      <div class="sk-cube-grid">
-        <div class="sk-cube sk-cube1"></div>
-        <div class="sk-cube sk-cube2"></div>
-        <div class="sk-cube sk-cube3"></div>
-        <div class="sk-cube sk-cube4"></div>
-        <div class="sk-cube sk-cube5"></div>
-        <div class="sk-cube sk-cube6"></div>
-        <div class="sk-cube sk-cube7"></div>
-        <div class="sk-cube sk-cube8"></div>
-        <div class="sk-cube sk-cube9"></div>
-      </div>
-    </div>
-    <!--
-  <script>
-    (function (i, d, t, o, u, h, s, f) {
-      i[t] = i[t] || [], i[t].push(h); i[h] = i[h] || function () {
-        return (i[h].q = i[h].q || []).push(arguments)
-      }; s = d.createElement(o); s.src = u;
-      s.async = 1; f = d.getElementsByTagName(o)[0]; f.parentNode.insertBefore(s, f);
-    })(window, document, "HyperAnalyticsObject", "script", "//t.hypers.com.cn/hwt.js?v=1.6", "_ha");
-    _ha("create", "1611");
-    _ha("send", "pageview");
-  </script>
-  --><script type="text/javascript" src="./bundle.js?730d41e423854a89dd97"></script></body>
-</html>
+      }</style><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/rsuite-theme@2.0.17/dist/css/rsuite.min.css"/><script src="//cdn.staticfile.org/babel-standalone/6.24.0/babel.min.js"></script><script defer="defer" src="./bundle.js?0a8bb778931b9658fcdc"></script><link href="./main.css?0a8bb778931b9658fcdc" rel="stylesheet"></head><body><div id="app"><div class="sk-cube-grid"><div class="sk-cube sk-cube1"></div><div class="sk-cube sk-cube2"></div><div class="sk-cube sk-cube3"></div><div class="sk-cube sk-cube4"></div><div class="sk-cube sk-cube5"></div><div class="sk-cube sk-cube6"></div><div class="sk-cube sk-cube7"></div><div class="sk-cube sk-cube8"></div><div class="sk-cube sk-cube9"></div></div></div></body></html>
